--- a/prison.html
+++ b/prison.html
@@ -8,9 +8,7 @@
 				border-style: solid;
 				border-radius: 5px;
 				border-width: 3px;
-                box-shadow: 0   4px 0 rgb(220,220,220),
-                           -4px 0   0 rgb(240,240,240),
-                            4px 0   0 rgb(240,240,240);
+                box-shadow: 0 0 10px rgb(100,100,100);
 				text-align: center;
 				height: 110px;
 				padding: 20px;
@@ -25,11 +23,9 @@
 				font-family: fantasy;
 				margin-top: 15px;
 				border-style: solid;
-                box-shadow: 0   2px 0 rgb(220,220,220),
-                           -2px 0   0 rgb(240,240,240),
-                            2px 0   0 rgb(240,240,240);
+                box-shadow: 0 0 4px rgb(100,100,100);
 				border-width: 3px;
-				height: 500px;
+				height: 400px;
 				text-align: center;
 				animation-name: appear;
   				animation-duration: 4s;
@@ -64,11 +60,13 @@
 				<div class = "col-12 col-sm-6">
 					<div class = "box">
 						Toggle Prison Gate<br><br>
+						<img src="alarm_off(1).png" style="width:200px;height:200px">
 					</div>
 				</div>
 				<div class = "col-12 col-sm-6">
 					<div class = "box">
-						Turn Off Alarm
+						Turn Off Alarm<br><br>
+						<img src="alarm_off(1).png" style="width:200px;height:200px">
 					</div>
 				</div>
 			</div>
