--- a/prison.html
+++ b/prison.html
@@ -48,6 +48,7 @@
 		</style>
 	</head>
 	<body>
+		<script src="script.js"></script>
 		<div class = "container">
 			<div class = "row">
 				<div class = "col-12">
