--- a/prison.html
+++ b/prison.html
@@ -38,7 +38,7 @@
 			}
 		</style>
 	</head>
-	<body background="https://media.gowallpaper.co.uk/media/catalog/product/n/i/nina_hancock_metal_panel_steel_blue_wallpaper_-_nh30000.jpg" onload ='get_data()'>
+	<body background="https://media.gowallpaper.co.uk/media/catalog/product/n/i/nina_hancock_metal_panel_steel_blue_wallpaper_-_nh30000.jpg" onload ='refreshpost()'>
 		<script src="script.js"></script>
 		<div class = "container">
 			<div class = "row">
